--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>title</title>
+		<title>Mini Player</title>
 	</head>
 	<body>
-        
-    </body>
+		<button onclick="main()">Test</button>
+		<script src="./JS/main.js"></script>
+	</body>
 </html>
