--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Mini Player</title>
 	</head>
 	<body>
-		<button onclick="main()">Test</button>
+		<button id="fetchArtistBtn">Test</button>
 		<script src="./JS/main.js"></script>
 	</body>
 </html>
