--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<button id="fetchArtistBtn">Test</button>
+        <pre id="result"></pre>
 		<script src="./JS/main.js"></script>
 	</body>
 </html>
